# PRISM-AI-DoD

./: .current-status-snapshot.md  .gitignore  .integration-ready-status.md  .worker-status-comprehensive.md  ACTIVE_DEVELOPMENT_STATUS.md  ALGORITHM_ANALYSIS_AND_BREAKTHROUGH_STRATEGY.md  AUTO_SYNC_GUIDE.md  BREAKTHROUGH_SYNTHESIS.md  CHERRY_PICK_GUIDE.md  CODEBASE_EVALUATION_REPORT.md  COST_FORECASTING_USAGE.md  CURRENT_STATUS.md  DAY_1_SUMMARY.md  DAY_2_SUMMARY.md  DELIVERABLES_SUMMARY.md  DEMONSTRATION_CAPABILITIES.md  DOCUMENTATION_INDEX.md  EXECUTABLE_ACTION_PLAN.md  FIDELITY_METRICS.md  GEMINI_AUDIT_EVALUATION_RUBRIC.md  GEMINI_AUDIT_FILE_LIST.md  GEMINI_AUDIT_QUICK_START.sh  GEMINI_CODE_AUDIT_DIRECTIVE.md  GETTING_STARTED.md  GPU_ACCELERATION_STATUS.md  GPU_INTEGRATION.md  GPU_INTEGRATION_STATUS.md  GPU_NEUROMORPHIC_INTEGRATION_REPORT.md  GPU_TYPE_IMPORT_FIXES.md  IMMEDIATE_ACTION_PLAN.md  INDEX.md  INITIALIZE_ALL_WORKERS.sh  INTEGRATION_CHECKLIST.md  INTEGRATION_DASHBOARD.md  INTEGRATION_LEAD_ASSIGNMENT.md  INTEGRATION_STATUS_REPORT.md  INTEGRATION_STATUS_UPDATE.md  INTEGRATION_SYSTEM_SUMMARY.md  LEGACY_FOLDERS_README.md  MATH_IMPROVEMENTS.md  (+66 more)
03-Source-Code/: API_ARCHITECTURE.md  APPLICATIONS_README.md  BUILD_ERROR_FIX_REPORT.md  CLEANUP_OBSOLETE_DOCS.sh  CPU_FALLBACK_AUDIT.md  CPU_FALLBACK_ELIMINATION_PLAN.md  CUBLAS_FIX_SUMMARY.md  CUDA13_FINAL_STATUS.md  CUDA13_STATUS.md  Cargo.toml  EXTERNAL_API_ANALYSIS.md  FINAL_GPU_STATUS_HONEST.md  FINAL_HANDOFF.md  FIXES_APPLIED.md  GPU_ACCELERATION_FINAL_STATUS.md  GPU_ENABLED_SUCCESS.md  GPU_INTEGRATION_REPORT.md  GPU_KERNEL_INTEGRATION_GUIDE.md  GPU_KERNEL_SUCCESS.md  GPU_MIGRATION_COMPLETE.md  GPU_MIGRATION_PLAN.md  GPU_PERSISTENCE_TEST_RESULTS.md  GPU_QUICK_START.md  GPU_TIME_SERIES_KERNELS.md  GPU_VALIDATION_REPORT.md  KNOWN_ISSUES.md  LLM_API_SETUP.md  MEMORY_OPTIMIZATION_GUIDE.md  MIGRATION_COMPLETE_100_PERCENT.md  MISSION_CHARLIE_PRODUCTION_GUIDE.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PERFORMANCE_REPORT.md  PRISM_AI_VALUE_ANALYSIS.md  PRODUCTION_GPU_COMPLETE.md  PWSA_GPU_TASKS.md  QUICKSTART_LLM.md  REMAINING_30_ERRORS_ANALYSIS.md  RUNTIME_TESTING_GUIDE.md  SESSION_COMPLETE_SUMMARY.md  benchmark_baseline_results.txt  (+21 more)
03-Source-Code/archive/old-status-files/: GPU_API_FIX_PLAN.md  GPU_DETAILED_IMPLEMENTATION.md  GPU_DRIVER_STATUS.md  GPU_IMPLEMENTATION_PLAN.md  GPU_MODULE_PRIORITY.md  GPU_TEST_SUCCESS.md  GPU_TRUTH_STATUS.md  GPU_VALIDATION_COMPLETE.md  PTX_LOADING_REQUIREMENTS.md  SECURE_BOOT_FIX.md
03-Source-Code/benches/: comprehensive_benchmarks.rs  finance_forecasting_gpu.rs  healthcare_gpu.rs  information_metrics_bench.rs  llm_benchmarks.rs  worker7_performance.rs
03-Source-Code/cuda_kernels/: tensor_core_matmul.cu
03-Source-Code/docs/: API_DEPLOYMENT_GUIDE.md  API_IMPLEMENTATION_STATUS.md  API_TESTING_GUIDE.md  API_TEST_RESULTS.md  DELIVERABLES_REVIEW.md  DEPLOYMENT_GUIDE.md  GPU_PERFORMANCE_PROFILING_GUIDE.md  GPU_QUICK_START_TUTORIAL.md  GPU_TROUBLESHOOTING_GUIDE.md
03-Source-Code/examples/: active_inference_robotics_demo.rs  arima_forecasting_tutorial.rs  drug_discovery_demo.rs  enhanced_it_demo.rs  gpu_integration_showcase.rs  gpu_monitoring_demo.rs  gpu_neuromorphic_demo.rs  gpu_production_profiler.rs  healthcare_risk_demo.rs  lstm_time_series_complete.rs  manufacturing_demo.rs  pwsa_demo.rs  pwsa_pixel_demo.rs  pwsa_streaming_demo.rs  supply_chain_demo.rs  test_bpe_tokenizer.rs  test_gguf_integration.rs  test_kv_cache.rs  test_kv_cache_integration.rs  trajectory_forecasting_demo.rs  transfer_entropy_finance_demo.rs  universal_solver_demo.rs  worker7_robotics_motion_planning.rs
03-Source-Code/kernels/: cutlass_protein_kernels.cu
03-Source-Code/python_bridge/: thermodynamics_bridge.py
03-Source-Code/src/: gpu_coloring.rs  gpu_launcher.rs  gpu_runtime.cu  lib.rs
03-Source-Code/src/active_inference/: generative_model.rs  gpu.rs  gpu_inference.rs  gpu_optimization.rs  gpu_policy_eval.rs  hierarchical_inference_gpu.rs  hierarchical_model.rs  mod.rs  policy_search_gpu.rs  policy_selection.rs  recognition_model.rs  transition_model.rs
03-Source-Code/src/adapters/: Cargo.toml
03-Source-Code/src/api/: mod.rs
03-Source-Code/src/api_server/: README.md  advanced_info_theory.rs  advanced_kalman.rs  dual_api.rs  graphql_schema.rs  kalman.rs  middleware.rs  mod.rs  performance.rs  portfolio.rs  rate_limit.rs
03-Source-Code/src/applications/: information_metrics_optimized.rs  mod.rs
03-Source-Code/src/assistant/: mod.rs  prism_assistant.rs
03-Source-Code/src/chemistry/: gpu_docking.rs  mod.rs  rdkit_wrapper.rs
03-Source-Code/src/cma/: conformal_prediction.rs  gpu_integration.rs  pac_bayes.rs  transfer_entropy_gpu.rs
03-Source-Code/src/finance/: mod.rs  portfolio_forecaster.rs  quantum_voting.rs  thermodynamic_consensus.rs
03-Source-Code/src/foundation/: Cargo.toml
03-Source-Code/src/gpu/: active_memory_pool.rs  adaptive_feature_fusion_v2.rs  cublas_interposer.c  cudarc_replacement.rs  gpu_enabled.rs  gpu_executor.rs  gpu_real.rs  kernel_autotuner.rs  kernel_executor.rs  kernel_launcher.rs  memory_manager.rs  memory_pool.rs  memory_simple.rs  mod.rs  neuromorphic_ffi.rs  neuromorphic_quantum_hybrid.rs  production_runtime.rs  python_bridge.rs  quantum_gpu_fusion_v2.rs  simple_gpu.rs  simple_gpu_v2.rs  tensor_ops.rs  thermodynamic_computing.rs
03-Source-Code/src/information_theory/: adaptive_embedding.rs  advanced_transfer_entropy.rs  bootstrap_ci.rs  conditional_te.rs  gpu.rs  gpu_entropy.rs  gpu_transfer_entropy.rs  incremental_te.rs  kdtree.rs  ksg_estimator.rs  memory_efficient.rs  mod.rs  multiple_testing.rs  mutual_information.rs  pid.rs  symbolic_te.rs  (+1 more)
03-Source-Code/tests/: forecasting_validation.rs  gguf_loader_test.rs  gpu_pixel_test.rs  gpu_time_series_test.rs  graphql_test_queries.json  information_theory_phase1_tests.rs  integration_test.rs  k_quant_test.rs  kv_cache_test.rs  phase3_integration.rs  pwsa_integration_test.rs  pwsa_ml_classifier_test.rs  pwsa_vendor_sandbox_test.rs  sampling_test.rs
docs/: API.md  (+4 more)
examples/cli/: Cargo.toml  README.md
src/gpu_test/: Cargo.toml
(+1030 files in other folders)
