[package]
name = "prism-cli"
version = "0.1.0"
edition = "2021"
authors = ["PRISM-AI Team"]
description = "Command-line interface for PRISM-AI REST API"
license = "MIT"

[[bin]]
name = "prism"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "color", "suggestions"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
colored = "2.1"
tabled = "0.15"
indicatif = "0.17"
dirs = "5.0"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
