[package]
name = "prct-adapters"
version = "0.1.0"
edition = "2021"
authors = ["ARES Team"]
description = "Infrastructure adapters implementing PRCT port interfaces"

[dependencies]
# Domain dependencies (ports we implement)
prct-core = { path = "../prct-core" }
shared-types = { path = "../shared-types" }

# Infrastructure dependencies (engines we wrap)
neuromorphic-engine = { path = "../neuromorphic", default-features = false, features = ["cuda"] }
quantum-engine = { path = "../quantum" }
platform-foundation = { path = "../foundation" }

# Quantum MLIR support will be in main crate

# Utilities
anyhow = "1.0"
ndarray = "0.15"
num-complex = "0.4"
nalgebra = "0.33"
parking_lot = "0.12"
tokio = { version = "1.0", features = ["sync"] }

# GPU support
cudarc = { version = "0.17", features = ["driver", "nvrtc", "cublas", "curand"] }

[features]
default = ["cuda"]
cuda = ["neuromorphic-engine/cuda"]
simulation = ["neuromorphic-engine/simulation"]
