[package]
name = "neuromorphic-engine"
version = "0.1.0"
edition = "2021"

[features]
default = ["simulation"]
# Real CUDA GPU acceleration (requires NVIDIA drivers + RTX GPU)
cuda = ["cudarc", "candle-core", "candle-nn"]
# CPU-based simulation with artificial speedup for testing
simulation = []

[dependencies]
nalgebra = { version = "0.33", features = ["std"] }
ndarray = "0.15"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dashmap = "6.0"

# CPU optimization (always available)
rayon = "1.10"

# GPU acceleration with CUDA 12.0 support for RTX 5070 (Ada Lovelace, compute 8.9)
# Optional - only compiled when 'cuda' feature is enabled
cudarc = { version = "0.17", features = ["f16", "cublas", "curand", "cuda-12000"], optional = true }
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }

[lib]
name = "neuromorphic_engine"
path = "src/lib.rs"