[package]
name = "prct-core"
version = "0.1.0"
edition = "2021"
authors = ["ARES Team"]
description = "Phase Resonance Chromatic-TSP (PRCT) Domain Logic"

[features]
default = []
cuda = []

[dependencies]
# Domain dependencies - MINIMAL, only what's essential
shared-types = { path = "../shared-types" }
anyhow = "1.0"
thiserror = "1.0"

# For algorithm implementation (not infrastructure)
ndarray = "0.15"
rayon = "1.10"  # Parallel CPU algorithms
rand = "0.8"     # For simulated annealing
rand_chacha = "0.3"  # For deterministic RNG

# GPU acceleration (optional) - relies on parent workspace cudarc
# cudarc is provided by parent crate, not declared here

[dev-dependencies]
# For testing with mocks
tokio = { version = "1.0", features = ["full", "test-util"] }
